edited script source.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-		<script src="./assets/js/scripts.js"></script>
+		<script src="./js/script.js"></script>
   </body>
 </html>
